import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
	java
	id("org.springframework.boot") version "3.5.3"
	id("io.spring.dependency-management") version "1.1.7"
	id("nu.studer.jooq") version "10.1"
    id("com.diffplug.spotless") version "6.19.0"
    id("org.openapi.generator") version "7.14.0"
    id("com.github.node-gradle.node") version "7.0.2"
}

group = "ru.giga-chill"
version = "0.0.1-SNAPSHOT"

// === Java toolchain ===
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom(configurations.annotationProcessor.get())
	}
}

repositories {
	mavenCentral()
}

val jooqVersion = "3.20.5"

// === spotless конфигурация ===
spotless {
    java {
        target("src/**/*.java")
        // Форматирование для Java файлов
        googleJavaFormat().aosp()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()

        // Исключить сгенерированные JOOQ файлы
        targetExclude("**/build/generated-sources/**", "**/build/generated/**")
    }
}

// === Зависимости приложения и тестов ===
dependencies {

    //MinIO
    implementation("io.minio:minio:8.5.16")
    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")

    //Swagger API
    implementation("io.swagger.core.v3:swagger-annotations:2.2.9")
    implementation("org.openapitools:jackson-databind-nullable:0.2.6")
    compileOnly("javax.annotation:javax.annotation-api:1.3.2")
    // Lombok
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    // Mapper
    implementation("org.mapstruct:mapstruct:1.5.5.Final")
    annotationProcessor("org.mapstruct:mapstruct-processor:1.5.5.Final")

    // Spring Boot
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-validation")
	implementation("org.springframework.boot:spring-boot-starter-aop")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-jooq")
    implementation("io.github.cdimascio:dotenv-java:3.2.0")

    // JWT
    implementation("io.jsonwebtoken:jjwt-api:0.12.1")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.1")
    runtimeOnly("io.jsonwebtoken:jjwt-gson:0.12.1")

    // PostgreSQL драйвер для приложения
    runtimeOnly("org.postgresql:postgresql")

    // Logging
    implementation("net.logstash.logback:logstash-logback-encoder:8.1")

    // Тесты
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // jOOQ codegen
    implementation("org.jooq:jooq:$jooqVersion")
    jooqGenerator("org.jooq:jooq:$jooqVersion")
    jooqGenerator("org.jooq:jooq-codegen:$jooqVersion")
    jooqGenerator("org.jooq:jooq-meta:$jooqVersion")
    jooqGenerator("org.postgresql:postgresql")
}

// === Пути для файлов генерации ===
val specMainPath: String = System.getenv("OPEN_API_MAIN_SPECIFICATION")

// === Задача для генерации основного API ===
val generateOpenApi by tasks.registering(GenerateTask::class) {
    group = "openapi"
    description = "Генерация кода по основному API"

    validateSpec.set(false)
    generatorName.set("spring")
    inputSpec.set(specMainPath)
    outputDir.set(layout.buildDirectory.dir("generated/api").get().asFile.absolutePath)
    apiPackage.set("ru.gigachill.web.api")
    modelPackage.set("ru.gigachill.web.api.model")
    invokerPackage.set("ru.gigachill.web.api.invoker")
    configOptions.set(
        mapOf(
            "useJakartaEe" to "true",
            "interfaceOnly" to "true",
            "skipDefaultInterface" to "true",
            "dateLibrary" to "java8",
            "useBeanValidation" to "true",
            "performBeanValidation" to "true",
            "sourceFolder" to "",
            "useTags" to "true"
        )
    )
}

tasks.withType<Test> {
	useJUnitPlatform()
}

val dbHost: String = System.getenv("DB_HOST")
val dbPort: String = System.getenv("DB_PORT")
val dbName: String = System.getenv("DB_NAME")
val dbUser: String = System.getenv("DB_USER")
val dbPassword: String = System.getenv("DB_PASSWORD")

val jdbcUrl = "jdbc:postgresql://$dbHost:$dbPort/$dbName"

sourceSets["main"].java.srcDir(layout.buildDirectory.dir("generated-sources/jooq"))
sourceSets["main"].java.srcDir(layout.buildDirectory.dir("generated/api"))


// === jOOQ codegen конфигурация ===
jooq {
    configurations {
        create("main") {
            generateSchemaSourceOnCompilation.set(false) // чтобы не генерировать на каждой сборке (можно true)

            jooqConfiguration.apply {
                logging = org.jooq.meta.jaxb.Logging.WARN

                jdbc.apply {
                    driver = "org.postgresql.Driver"
                    url = jdbcUrl
                    user = dbUser
                    password = dbPassword
                }

                generator.apply {
                    name = "org.jooq.codegen.DefaultGenerator"

                    database.apply {
                        name = "org.jooq.meta.postgres.PostgresDatabase"
                        inputSchema = "public"
                        includes = ".*"
                        excludes = "flyway_schema_history|pgp_armor_headers"
                    }

                    generate.apply {
                        isDeprecated = false
                        isRecords = true
                        isPojos = true
                        isTables = true
                        isImmutablePojos = true
                        isFluentSetters = true
                    }

                    target.apply {
                        packageName = "ru.gigachill.jooq.generated"
                        directory = layout.buildDirectory.dir("generated-sources/jooq").get().asFile.absolutePath
                    }
                }
            }
        }
    }
}
